# Shaders-2

./: AGENT_MEMORY_EXPLAINED.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  EXTERNAL_RESOURCES.md  FUTURE_AGENT_TEST.md  IMPLEMENTATION_SUMMARY.md  OPENCLAW_VS_COPILOT.md  PROJECT_NOTES.md  README.md  REPOSITORY_ANALYSIS.md  fast-realistic-clouds-v1.3.0.fs
.github/: copilot-instructions.md
docs/: AI_TOOL_COMPARISON.md  FFGL_AGENTIC_SETUP.md  GETTING_STARTED.md  ISF_GUIDE.md
docs/guides/: ISF_TO_FFGL.md
docs/sessions/: sketchbook_reveal_agent_session.md
effects/: BrightnessContrast.fs  ChromaticAberration.fs  EdgeDetection.fs  GaussianBlur.fs  Pixelate.fs  Vignette.fs
ffgl_agentic/: .gitmodules  CMakeLists.txt  README.md
ffgl_agentic/.github/workflows/: build-ffgl.yml
ffgl_agentic/docs/guides/: building.md  installing.md
ffgl_agentic/docs/sessions/: sketchbook_reveal_ffgl_port.md
ffgl_agentic/source/plugins/SketchbookReveal/: CMakeLists.txt  SketchbookReveal.cpp  SketchbookReveal.h
generators/: Checkerboard.fs  CircleWaves.fs  ColorGradient.fs  Plasma.fs  RadialBurst.fs  Starfield.fs
mixers/SketchbookReveal/: CHANGELOG.md  README.md  SketchbookReveal_v4.1.isf
shaders/: BurningShip.fs  FractalNoise.fs  JuliaSet.fs  KaleidoscopeFractal.fs  Mandelbrot.fs  SierpinskiTriangle.fs
